--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">Example</string>
+    <string name="app_name" translatable="false">Example</string>
+    <string name="nav_open" translatable="false">Open</string>
+    <string name="nav_close" translatable="false">Close</string>
+
     <string name="label_home">Home</string>
     <string name="label_detail">Details</string>
     <string name="open_in_browser">Open In Browser</string>
@@ -11,4 +14,28 @@
     <string name="favorite">Favorite</string>
     <string name="label_favorite">Favorite</string>
     <string name="label_favorite_detail">Favorite Detail</string>
+    <string name="help">help</string>
+    <string name="home">Home</string>
+    <string name="news">News</string>
+    <string name="sport">Sports</string>
+    <string name="all">All</string>
+    <string name="input_text_search">Please Input Text</string>
+    <string name="dialog_title_search">Enter Your Text</string>
+    <string name="message_no_result">No Result</string>
+    <string name="help_search">to do a search click the search button and so a dialog will appear to enter input …</string>
+    <string name="help_drawer">open menu drawer to see all menus..</string>
+    <string name="dialog_save_title">Are you sure want to save to favorites</string>
+    <string name="yes">Yes</string>
+    <string name="message_success_save_to_favorite">Success Save To Favorite</string>
+    <string name="message_fail_save_to_favorite">Fail Save To Favorite</string>
+    <string name="no">No</string>
+    <string name="help_save_message">to save press the sava button a dialog will appear confirm press yes if you want to save no to cancel if successful will save it in favorites …</string>
+    <string name="help_open_message">click the link or press the open browser button to open it in your browser …</string>
+    <string name="help_item_favorite">click the item to see the details there you can delete it</string>
+    <string name="dialog_title_delete_favorite">Are you sure want to delete from favorites?</string>
+    <string name="success_delete_favorite">Success Delete To Favorite</string>
+    <string name="fail_delete_favorite">Fail Delete To Favorite</string>
+    <string name="help_delete_message">to delete press the delete button a dialog will appear confirm press yes if you want to delete no to cancel if successful will delete it in favorites …</string>
+    <string name="version">version</string>
+    <string name="help_item_main">click the item to see the details</string>
 </resources>
